데이터베이스 연결 및 기본서비스 생성

--- a/insightcampus_api/appsettings.json
+++ b/insightcampus_api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=fininsightdevdb.mysql.database.azure.com;User Id=insightonline@fininsightdevdb;Password=fin150427!@;Database=fininsightdevdb"
+    "DefaultConnection": "Server=fininsightdevdb.mysql.database.azure.com;User Id=insightcampus@fininsightdevdb;Password=fin150427,.;Database=insightcampus"
   },
   "AppSettings": {
     "Token": "fIn!In@sIghT_1%0$2&!",
