--- a/insightcampus_api/insightcampus_api.csproj
+++ b/insightcampus_api/insightcampus_api.csproj
@@ -8,6 +8,7 @@
     <Folder Include="wwwroot\" />
     <Folder Include="Model\" />
     <Folder Include="Data\" />
+    <Folder Include="Dao\" />
   </ItemGroup>
 
   <ItemGroup>
@@ -19,4 +20,8 @@
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="2.1.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Remove="Dao\RoleModel.cs" />
+    <Compile Remove="Dao\CategoryClass.cs" />
+  </ItemGroup>
 </Project>
