--- a/insightcampus_api/insightcampus_api.csproj
+++ b/insightcampus_api/insightcampus_api.csproj
@@ -18,6 +18,10 @@
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="2.1.4" />
+    <PackageReference Include="CsvHelper" Version="15.0.5" />
+    <PackageReference Include="Microsoft.Office.Interop.Excel" Version="15.0.4795.1000" />
+    <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" />
+    <PackageReference Include="ClosedXML" Version="0.95.3" />
   </ItemGroup>
 
   <ItemGroup>
