create pdf converter

--- a/insightcampus_api/Properties/launchSettings.json
+++ b/insightcampus_api/Properties/launchSettings.json
@@ -19,7 +19,7 @@
     },
     "insightcampus_api": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "api/values",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
