curriculum, incam-addfare page login 적용

--- a/insightcampus_api/insightcampus_api.csproj
+++ b/insightcampus_api/insightcampus_api.csproj
@@ -26,6 +26,7 @@
     <PackageReference Include="ClosedXML" Version="0.95.3" />
     <PackageReference Include="iTextSharp.LGPLv2.Core" Version="1.6.7" />
     <PackageReference Include="DinkToPdf" Version="1.0.8" />
+    <PackageReference Include="Microsoft.Office.Interop.Word" Version="15.0.4797.1003" />
   </ItemGroup>
 
   <ItemGroup>
