--- a/insightcampus_api/insightcampus_api.csproj
+++ b/insightcampus_api/insightcampus_api.csproj
@@ -26,6 +26,9 @@
     <PackageReference Include="ClosedXML" Version="0.95.3" />
     <PackageReference Include="DinkToPdf" Version="1.0.8" />
     <PackageReference Include="Microsoft.Office.Interop.Word" Version="15.0.4797.1003" />
+    <PackageReference Include="AWSSDK.Core" Version="3.5.1.57" />
+    <PackageReference Include="AWSSDK.S3" Version="3.5.7.4" />
+    <PackageReference Include="FroalaEditor" Version="3.2.0" />
   </ItemGroup>
 
   <ItemGroup>
